--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - name: docker build golang
         run: |
-          docker build -t eminoz/graceful .
+          docker build -t eminoz/k8s-graceful-shutdown  .
       - name: docker push
         run: |
          docker push eminoz/k8s-graceful-shutdown    
