--- a/k8s/user-deployment.yaml
+++ b/k8s/user-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: users-deployment
+  name: rabbit-consumer
 spec:
   replicas: 1
   selector: 
